--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
       padding: 50px;
       display: flex;
       flex-direction: column;
-      justify-content: center;
+      justify-content: flex-start; /* Align content to the top */
     }
 
     .branding {
-      margin-bottom: 3cm;
-      margin-top: 10px;
+      margin-bottom: 20px; /* Reduced margin for better spacing */
     }
 
     .logo {
       display: flex;
       align-items: center;
+      margin-bottom: 4cm;
     }
 
     .circle {
@@ -133,7 +133,7 @@
     <div class="left-panel">
       <div class="branding">
         <div class="logo">
-           <img src="images/logo.svg" alt="Lady in Pink Shirt">
+           <img src="images/logo.svg" alt="Base Apparel Logo">
         </div>
       </div>
       <div class="announcement">
